<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="scores">Scores</string>
    <string name="library">Library</string>
    <string name="build_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone:  My Own App</string>

</resources>
