<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="36dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/popular_movies"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#FFC107"
            android:text="@string/popular_movies"
            android:onClick="launchPopularMovies"/>

        <Button
            android:id="@+id/scores"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#FFC107"
            android:text="@string/scores"
            android:onClick="launchScores"/>

        <Button
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#FFC107"
            android:text="@string/library"
            android:onClick="launchLibrary"/>

        <Button
            android:id="@+id/build_bigger"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#FFC107"
            android:text="@string/build_bigger"
            android:onClick="launchBuildBigger"/>

        <Button
            android:id="@+id/xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#FFC107"
            android:text="@string/xyz_reader"
            android:onClick="launchXYZReader"/>

        <Button
            android:id="@+id/capstone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#7B1FA2"
            android:textColor="#FFFFFF"
            android:text="@string/capstone"
            android:onClick="launchCapstone"/>

    </LinearLayout>

</LinearLayout>
